# project-mognet

./: .flake8  .git-blame-ignore-revs  .gitignore  .pylintrc  .travis.yml  404.html  CITATION.cff  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.devcontainer/: Dockerfile  config.json  devcontainer.json  docker-compose-devcontainer.yaml  docker-compose.yaml
.github/workflows/: ci.yml  docs.yml  pypi.yml
advanced/dependency-injection/: index.html
advanced/metadata/: index.html
advanced/middleware/: index.html
advanced/overriding-queues/: index.html
advanced/setting-priorities/: index.html
advanced/stateful-tasks/: index.html
api-reference/: index.html
best-practices/: index.html
cli-reference/: index.html
common-operations/: index.html
comparison-to-celery/: index.html
demo/: .pylintrc  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
demo/mognet_demo/: api.py  config.py  models.py  mognet_app.py  s3.py  tasks.py
demo/mognet_demo/middleware/: auto_shutdown.py
demo/test/: conftest.py  not-a-text-file.json  test_api.py  test_worker_task.py  text-file.txt
docs/: api-reference.md  best-practices.md  cli-reference.md  common-operations.md  comparison-to-celery.md  examples.md  index.md
docs/advanced/: dependency-injection.md  metadata.md  middleware.md  overriding-queues.md  setting-priorities.md  stateful-tasks.md
docs/vendor-specifics/: rabbitmq.md  redis.md
examples/: index.html
mognet/: __init__.py  __main__.py
mognet/app/: app.py  app_config.py
mognet/backend/: __init__.py  backend_config.py  base_result_backend.py  memory_result_backend.py  redis_result_backend.py
mognet/broker/: amqp_broker.py  base_broker.py  broker_config.py  memory_broker.py
mognet/cli/: cli_state.py  exceptions.py  main.py  models.py  nodes.py  queues.py  run.py  run_in_loop.py  tasks.py
mognet/context/: context.py
mognet/decorators/: task_decorator.py
mognet/exceptions/: base_exceptions.py  broker_exceptions.py  result_exceptions.py  task_exceptions.py  too_many_retries.py
mognet/middleware/: middleware.py
mognet/model/: queue_stats.py  result.py  result_state.py  result_tree.py
mognet/primitives/: queries.py  request.py  revoke.py
mognet/service/: class_service.py
mognet/state/: base_state_backend.py  redis_state_backend.py  state.py  state_backend_config.py
mognet/tasks/: task_registry.py
mognet/testing/: pytest_integration.py
mognet/tools/: dates.py  (+3 more)
search/: search_index.json
test/: app_instance.py  conftest.py  test_broker.py  test_execution_time.py  test_pausing.py  test_recursion.py  test_result_backend.py  test_retry.py  test_revoke.py  test_sync_tasks.py  test_tasks.py  test_validation.py
(+4 files in other folders)
