[tool.poetry]
name = "mognet"
version = "1.4.0"
description = "Mognet is a fast, simple framework to build distributed applications using task queues."
authors = ["André Carvalho <afecarvalho@gmail.com>", "Christoph Auer <cau@zurich.ibm.com>", "Michele Dolfi <dol@zurich.ibm.com>", "Peter Staar <taa@zurich.ibm.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://ds4sd.github.io/project-mognet/"
repository = "https://github.com/DS4SD/project-mognet"
documentation = "https://ds4sd.github.io/project-mognet/"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed"
]
include = ["mognet/py.typed"]

[tool.poetry.scripts]
mognet = "mognet.cli.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.0"
typing-extensions = {version = ">=3.10.0.0", python = "<3.10"}
aio-pika = "^6.8.0"
treelib = "^1.6.0"
tabulate = "^0.9.0"
typer = "^0.9.0"
aiorun = "^2021.10.1"
redis = {extras = ["hiredis"], version = "^4.2.2"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
mkdocs = "^1.2.3"
Jinja2 = "<3.1.0" # See https://github.com/mkdocs/mkdocs/issues/2794
mkdocs-material = "^8.2.6"
mkdocstrings = {version = "^0.18.1", extras = ["python-legacy"]}
mkdocs-typer = "^0.0.2"

[build-system]
# Allow the package to be installed with `pip install -e ...`,
# which now requires PEP 660 support on newer pip versions.
# See https://github.com/python-poetry/poetry/issues/34,
# This should be revised once `poetry-core` reaches 1.2 (?),
# should be around Q1 2022.
# For now, the fix is https://github.com/python-poetry/poetry/issues/34#issuecomment-997519115
# A specific commit was pinned instead of master for stability.
requires = [
    "poetry-core @ git+https://github.com/python-poetry/poetry-core.git@af08f1ce720da467c9bf3d43eed3d9ebaf4ad7fb",
    "setuptools"
]
build-backend = "poetry.core.masonry.api"
