[tool.poetry]
name = "mognet-demo"
version = "0.1.0"
description = "Demo for Mognet"
authors = ["André Carvalho <afecarvalho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiobotocore = "^2.2.0"
motor = "^2.5.1"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
mognet = "^1.3.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
